prompt player when out of ammo #fixes 34

--- a/lang/en.json
+++ b/lang/en.json
@@ -249,6 +249,9 @@
   "PB.OutcomeFailure": "Failure",
   "PB.OutcomeFumble": "Fumble",
   "PB.OutcomeSuccess": "Success",
+  "PB.OutOfAmmo": "You have run out of ammo. Do you want to reload anyway?",
+  "PB.OutOfAmmoTitle": "Out of Ammo",
+  "PB.OutOfAmmoReloaded": "Reloaded {item} while out of ammo.",
   "PB.Party": "Party",
   "PB.PartyInitiative": "Party Initiative",
   "PB.PerDay": "per day",
