only allow a weapon to fire or reload with ammo

--- a/lang/en.json
+++ b/lang/en.json
@@ -227,8 +227,8 @@
   "PB.NoPowerUsesRemaining": "No Arcane Ritual uses remaining",
   "PB.NoResourceUsesRemaining": "No {type} uses remaining",
   "PB.Ok": "Ok",
-  "PB.OutOfAmmo": "You have run out of ammo. Do you want to reload anyway?",
-  "PB.OutOfAmmoReloaded": "Reloaded {item} while out of ammo.",
+  "PB.OutOfAmmo": "You have run out of ammo. Choose different ammo before reloading again.",
+  "PB.OutOfAmmoReloaded": "Tried to reload {item} without ammo.",
   "PB.OutOfAmmoTitle": "Out of Ammo",
   "PB.Outcome": "Outcome",
   "PB.OutcomeAnimationBroken": "Broken!",
