feat(effects): inital commit of expansion of efeect system

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,22 +25,28 @@
   "PB.ArmorCurrentTier": "Current Tier",
   "PB.ArmorMaxTier": "Max Tier",
   "PB.ArmorTable": "Armor Table",
+  "PB.ArmorTierBonus": "Armor Tier Modifier",
   "PB.ArmorTierHeavy": "Heavy",
   "PB.ArmorTierLight": "Light",
   "PB.ArmorTierMedium": "Medium",
   "PB.ArmorTierNone": "None",
   "PB.Attack": "Attack",
+  "PB.AttackBonus": "Attack Modifier",
   "PB.AttackCrit": "Critical",
   "PB.AttackCritText": "Deal double damage, then armor/protection is reduced one tier",
   "PB.AttackFumble": "Fumble",
   "PB.AttackFumbleText": "Weapon breaks or is lost.",
+  "PB.Attributes": "Attributes",
   "PB.Base": "Base",
   "PB.BaseClass": "Base Class",
   "PB.BaseClassRequired": "Base Class Required",
   "PB.Broken": "Broken",
   "PB.Cancel": "Cancel",
+  "PB.CargoCurrent": "Cargo (Current)",
+  "PB.CargoMax": "Cargo (Max)",
   "PB.CarryWeight": "Carry Weight",
   "PB.Carrying": "Carrying",
+  "PB.CarryingModifier": "Carrying Modifier",
   "PB.CarryingRule": "8+Strength normal-sized items or DR+2 on AGI/STR tests.",
   "PB.CarryingRuleNoPenalty": "8+Strength normal-sized items.",
   "PB.Change": "Change",
@@ -52,6 +58,8 @@
   "PB.CharacterGeneratorToggleNone": "Toggle None",
   "PB.CharacterGeneratorWarning": "Destroy this character, and replace it with a new Pirate? WARNING: This cannot be undone!",
   "PB.CharacterGeneratorWarningBaseClass": "* Require at least one class without a * selected.",
+  "PB.Combat": "Combat",
+  "PB.CombatBonuses": "Combat Bonuses",
   "PB.ContainerEmptyHelpText": "Drag items into this container.",
   "PB.ContainerHolding": "Holding",
   "PB.ContainerSpace": "Container Space",
@@ -61,14 +69,19 @@
   "PB.CreatureArmorDescription": "Armor Description",
   "PB.CreatureAttack": "Main Attack",
   "PB.CreatureAttackDescription": "Attack Description",
+  "PB.CreatureAttributes": "Creature Attributes",
   "PB.CreatureSpecial": "Special",
+  "PB.CrewCurrent": "Crew (Current)",
+  "PB.CrewMax": "Crew (Max)",
   "PB.DR": "DR",
   "PB.Damage": "Damage",
+  "PB.DamageBonus": "Damage Modifier",
   "PB.Defend": "Defend",
   "PB.DefendCrit": "Critical",
   "PB.DefendCritText": "PC can make an immediate free attack.",
   "PB.DefendFumble": "Fumble",
   "PB.DefendFumbleText": "PC takes double damage, then their armor is reduced one tier.",
+  "PB.DefenseBonus": "Defense Modifier",
   "PB.Dodge": "Dodge",
   "PB.EditAllowedCharacterGeneratorClassesMenu": "Allowed classes",
   "PB.EditAllowedCharacterGeneratorClassesMenuButtonLabel": "Edit",
@@ -96,8 +109,10 @@
   "PB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
   "PB.Equipment": "Equipment",
   "PB.EquipmentEmpty": "Drag items into the sheet to add items.",
+  "PB.ExtraResourceCurrent": "Extra Resource (Current)",
   "PB.ExtraResourceFormula": "Extra Resource Formula",
   "PB.ExtraResourceFormulaLabel": "Extra Resource Formula Label",
+  "PB.ExtraResourceMax": "Extra Resource (Max)",
   "PB.ExtraResourceNamePlural": "Extra Resource Plural Name",
   "PB.ExtraResourceNameSingular": "Extra Resource Singular Name",
   "PB.ExtraResourceTestFormula": "Extra Resource Test Formula",
@@ -130,12 +145,17 @@
   "PB.Help": "Help",
   "PB.Hit": "Hit",
   "PB.HitPoints": "Hit Points",
+  "PB.HitPointsCurrent": "Hit Points (Current)",
+  "PB.HitPointsMax": "Hit Points (Max)",
+  "PB.HullCurrent": "Hull (Current)",
+  "PB.HullMax": "Hull (Max)",
   "PB.IgnoreArmor": "Defend against black powder weapon",
   "PB.IncomingAttack": "Incoming Attack",
   "PB.Individual": "Individual",
   "PB.Infection": "Infected/sick/bleeding/poisoned",
   "PB.Inflict": "Inflict",
   "PB.Initiative": "Initiative",
+  "PB.InitiativeBonus": "Initiative Modifier",
   "PB.InitiativeEnemiesBegin": "Enemies go first",
   "PB.InitiativeFormula": "d6 + Agility",
   "PB.InitiativePlayerCharactersBegin": "PCs go first",
@@ -211,7 +231,10 @@
   "PB.ItemWeaponType": "Weapon Type",
   "PB.Label": "Label",
   "PB.Luck": "Devil's Luck",
+  "PB.LuckCurrent": "Luck (Current)",
+  "PB.LuckDieBonus": "Luck Die Modifier",
   "PB.LuckHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
+  "PB.LuckMax": "Luck (Max)",
   "PB.Lucks": "Devil's Luck(s)",
   "PB.MaxQuantity": "Maximum Quantity",
   "PB.Miss": "Miss",
@@ -279,6 +302,8 @@
   "PB.RitualPerday": "d4 + Spirit per day",
   "PB.RitualRemaining": "Rituals",
   "PB.Rituals": "Ritual(s)",
+  "PB.RitualsCurrent": "Rituals (Current)",
+  "PB.RitualsMax": "Rituals (Max)",
   "PB.Roll": "Roll",
   "PB.RollDamageButton": "Roll Damage",
   "PB.RollPartyInitiative": "Roll Party Initiative",
@@ -298,6 +323,8 @@
   "PB.SettingsFloatingOutcomeAnimationHint": "Display animations over tokens for roll outcomes (dodge, miss, hit, success, etc). Sequencer module required.",
   "PB.SettingsTrackAmmo": "Track Ammo",
   "PB.SettingsTrackAmmoHint": "Select and auto-decrement ammo for ranged weapons.",
+  "PB.ShantiesCurrent": "Shanties (Current)",
+  "PB.ShantiesMax": "Shanties (Max)",
   "PB.SheetClassCharacter": "Pirate Borg Character Sheet",
   "PB.SheetClassContainer": "Pirate Borg Container Sheet",
   "PB.SheetClassCreature": "Pirate Borg Creature Sheet",
@@ -346,6 +373,9 @@
   "PB.ShipWeighAnchorMessage": "The ship is no longer anchored.",
   "PB.ShouldIgnoreArmor": "Black powder weapons ignore armor",
   "PB.Silver": "Silver",
+  "PB.SpeedBonus": "Speed Modifier",
+  "PB.SpeedCurrent": "Speed (Current)",
+  "PB.SpeedMax": "Speed (Max)",
   "PB.SpeedsMove": "Move",
   "PB.SpeedsStay": "Stay",
   "PB.StandsFirm": "Stands firm",
@@ -376,6 +406,7 @@
   "PB.Tier": "Tier",
   "PB.Type": "Type",
   "PB.Unchanged": "Unchanged",
+  "PB.VehicleAttributes": "Vehicle Attributes",
   "PB.ViewButton": "View",
   "PB.Vs": "vs",
   "PB.WeaponTable": "Weapon Table",
