feat: Add automatic effect expiration system
- Add _onStartTurn/_onEndTurn hooks to PBCombat class
- Auto-expire temporary effects when duration.remaining <= 0
- Set duration.startRound/startTurn on temporary effect creation
- Display remaining rounds in effects list with clock icon
- Add autoExpireEffects system setting (default: true)
- Post chat notification when effects expire
- Add localization for EN, FR, PL languages

--- a/lang/en.json
+++ b/lang/en.json
@@ -102,6 +102,10 @@
   "PB.EffectsSkip": "Skip",
   "PB.EffectsSource": "Source",
   "PB.EffectsTemporary": "Temporary Effects",
+  "PB.EffectsDuration": "Duration",
+  "PB.EffectsRoundsRemaining": "Rounds Remaining",
+  "PB.EffectExpired": "{effect} has expired on {actor}",
+  "PB.EffectsUnnamed": "Unnamed Effect",
   "PB.EmptyCargo": "Cargo is Empty",
   "PB.EmptyCrew": "Drag and drop character or creature to add crews",
   "PB.Encumbered": "Encumbered",
@@ -311,6 +315,8 @@
   "PB.SelectAmmo": "Select ammo",
   "PB.SettingsAdvancedAnimation": "Advanced animations",
   "PB.SettingsAdvancedAnimationHint": "Enable animations for attacks, ship actions, defense, ritual, relic, etc. Sequencer, and JB2A Free or JB2A Patreon modules are required.",
+  "PB.SettingsAutoExpireEffects": "Auto-expire temporary effects",
+  "PB.SettingsAutoExpireEffectsHint": "Automatically remove temporary effects when their duration expires during combat.",
   "PB.SettingsApplyOvercapacityPenalty": "Apply overcapacity penalty",
   "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items.",
   "PB.SettingsAutomaticDamage": "Automatic damage and heal",
