--- a/lang/fr.json
+++ b/lang/fr.json
@@ -89,6 +89,10 @@
   "PB.EffectsSkip": "Passer",
   "PB.EffectsSource": "Source",
   "PB.EffectsTemporary": "Effets temporaires",
+  "PB.EffectsDuration": "Durée",
+  "PB.EffectsRoundsRemaining": "Rounds restants",
+  "PB.EffectExpired": "{effect} a expiré sur {actor}",
+  "PB.EffectsUnnamed": "Effet sans nom",
   "PB.EmptyCargo": "Cargaison vide",
   "PB.EmptyCrew": "Glissez et déposez un personnage ou une créature pour ajouter des membres d'équipage",
   "PB.Encumbered": "Surchargé",
@@ -286,6 +290,8 @@
   "PB.SelectAmmo": "Sélectionner munitions",
   "PB.SettingsAdvancedAnimation": "Animations avancées",
   "PB.SettingsAdvancedAnimationHint": "Activer les animations pour attaques, actions navires, défense, rituel, relique, etc. Les modules Sequencer et JB2A (Free ou Patreon) sont requis.",
+  "PB.SettingsAutoExpireEffects": "Expiration automatique des effets temporaires",
+  "PB.SettingsAutoExpireEffectsHint": "Supprimer automatiquement les effets temporaires lorsque leur durée expire pendant le combat.",
   "PB.SettingsApplyOvercapacityPenalty": "Appliquer la pénalité de surcharge",
   "PB.SettingsApplyOvercapacityPenaltyHint": "+2 DR AGILITÉ/FORCE quand vous portez plus de (FORCE + 8) objets.",
   "PB.SettingsAutomaticDamage": "Dégâts & soins automatiques",
