--- a/lang/pl.json
+++ b/lang/pl.json
@@ -89,6 +89,10 @@
   "PB.EffectsSkip": "Pomiń",
   "PB.EffectsSource": "Źródło",
   "PB.EffectsTemporary": "Efekty Tymczasowe",
+  "PB.EffectsDuration": "Czas Trwania",
+  "PB.EffectsRoundsRemaining": "Pozostałe Rundy",
+  "PB.EffectExpired": "{effect} wygasł na {actor}",
+  "PB.EffectsUnnamed": "Efekt Bez Nazwy",
   "PB.EmptyCargo": "Ładownia Jest Pusta",
   "PB.EmptyCrew": "Przeciągnij i upuść postać lub stwora, aby dodać załogę",
   "PB.Encumbered": "Przeciążony",
@@ -286,6 +290,8 @@
   "PB.SelectAmmo": "Wybierz amunicję",
   "PB.SettingsAdvancedAnimation": "Zaawansowane animacje",
   "PB.SettingsAdvancedAnimationHint": "Włącz animacje dla ataków, akcji statku, obrony, rytuałów, relikwii itp. Wymagane moduły Sequencer i JB2A Free lub JB2A Patreon.",
+  "PB.SettingsAutoExpireEffects": "Automatyczne wygasanie efektów tymczasowych",
+  "PB.SettingsAutoExpireEffectsHint": "Automatycznie usuwaj efekty tymczasowe, gdy ich czas trwania wygaśnie podczas walki.",
   "PB.SettingsApplyOvercapacityPenalty": "Zastosuj karę za przekroczenie pojemności",
   "PB.SettingsApplyOvercapacityPenaltyHint": "+2 ST SIŁ/ZWI przy noszeniu więcej niż SIŁ+8 przedmiotów.",
   "PB.SettingsAutomaticDamage": "Automatyczne obrażenia i leczenie",
