fix(i18n): Address PR #64 review feedback - localization improvements
- Localize Combat modifier options in quick-effect.html
- Localize modifier display names in actor-sheet.js addModifierDisplay()
- Localize error messages in actor-sheet.js effect handlers
- Localize modifier strings in attack/defend/initiative outcome files
- Localize 'modifier' text in character-sheet.html
- Add missing localization keys to en.json (ArmorTier, Defense, DRBonus,
  EffectsNotFound, LuckDie, LuckModifier, Speed)
- Include effect ID in 'Unknown' fallback for debugging
- Fix prettier formatting

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,7 @@
   "PB.ArmorCurrentTier": "Current Tier",
   "PB.ArmorMaxTier": "Max Tier",
   "PB.ArmorTable": "Armor Table",
+  "PB.ArmorTier": "Armor Tier",
   "PB.ArmorTierBonus": "Armor Tier Modifier",
   "PB.ArmorTierHeavy": "Heavy",
   "PB.ArmorTierLight": "Light",
@@ -74,6 +75,7 @@
   "PB.CrewCurrent": "Crew (Current)",
   "PB.CrewMax": "Crew (Max)",
   "PB.DR": "DR",
+  "PB.DRBonus": "DR Modifier",
   "PB.Damage": "Damage",
   "PB.DamageBonus": "Damage Modifier",
   "PB.Defend": "Defend",
@@ -81,6 +83,7 @@
   "PB.DefendCritText": "PC can make an immediate free attack.",
   "PB.DefendFumble": "Fumble",
   "PB.DefendFumbleText": "PC takes double damage, then their armor is reduced one tier.",
+  "PB.Defense": "Defense",
   "PB.DefenseBonus": "Defense Modifier",
   "PB.Dodge": "Dodge",
   "PB.EditAllowedCharacterGeneratorClassesMenu": "Allowed classes",
@@ -99,6 +102,7 @@
   "PB.EffectsItemOwned": "Effects can only be added to world items or actors directly",
   "PB.EffectsNew": "New Effect",
   "PB.EffectsNoneFound": "No Effect Found",
+  "PB.EffectsNotFound": "Effect not found",
   "PB.EffectsPassive": "Passive Effects",
   "PB.EffectsQuick": "Quick Effect",
   "PB.EffectsRoundsRemaining": "Rounds Remaining",
@@ -236,9 +240,11 @@
   "PB.Label": "Label",
   "PB.Luck": "Devil's Luck",
   "PB.LuckCurrent": "Luck (Current)",
+  "PB.LuckDie": "Luck Die",
   "PB.LuckDieBonus": "Luck Die Modifier",
   "PB.LuckHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
   "PB.LuckMax": "Luck (Max)",
+  "PB.LuckModifier": "Luck Modifier",
   "PB.Lucks": "Devil's Luck(s)",
   "PB.MaxQuantity": "Maximum Quantity",
   "PB.Miss": "Miss",
@@ -380,6 +386,7 @@
   "PB.ShipWeighAnchorMessage": "The ship is no longer anchored.",
   "PB.ShouldIgnoreArmor": "Black powder weapons ignore armor",
   "PB.Silver": "Silver",
+  "PB.Speed": "Speed",
   "PB.SpeedBonus": "Speed Modifier",
   "PB.SpeedCurrent": "Speed (Current)",
   "PB.SpeedMax": "Speed (Max)",
