Add missing Polish translations

--- a/lang/pl.json
+++ b/lang/pl.json
@@ -25,22 +25,29 @@
   "PB.ArmorCurrentTier": "Obecny Poziom",
   "PB.ArmorMaxTier": "Maks. Poziom",
   "PB.ArmorTable": "Tabela Pancerzy",
+  "PB.ArmorTier": "Poziom Pancerza",
+  "PB.ArmorTierBonus": "Modyfikator Poziomu Pancerza",
   "PB.ArmorTierHeavy": "Ciężki",
   "PB.ArmorTierLight": "Lekki",
   "PB.ArmorTierMedium": "Średni",
   "PB.ArmorTierNone": "Brak",
   "PB.Attack": "Atak",
+  "PB.AttackBonus": "Modyfikator Ataku",
   "PB.AttackCrit": "Krytyczny",
   "PB.AttackCritText": "Zadaj podwójne obrażenia, następnie pancerz/ochrona jest obniżana o jeden poziom",
   "PB.AttackFumble": "Skucha",
   "PB.AttackFumbleText": "Broń pęka lub zostaje zgubiona.",
+  "PB.Attributes": "Atrybuty",
   "PB.Base": "Bazowy",
   "PB.BaseClass": "Klasa Bazowa",
   "PB.BaseClassRequired": "Wymagana Klasa Bazowa",
   "PB.Broken": "Zniszczony",
   "PB.Cancel": "Anuluj",
+  "PB.CargoCurrent": "Ładunek (Obecny)",
+  "PB.CargoMax": "Ładunek (Maks.)",
   "PB.CarryWeight": "Udźwig",
   "PB.Carrying": "Noszenie",
+  "PB.CarryingModifier": "Modyfikator Noszenia",
   "PB.CarryingRule": "8+Siła przedmiotów normalnego rozmiaru lub ST+2 przy testach ZWI/SIŁ.",
   "PB.CarryingRuleNoPenalty": "8+Siła przedmiotów normalnego rozmiaru.",
   "PB.Change": "Zmień",
@@ -52,6 +59,8 @@
   "PB.CharacterGeneratorToggleNone": "Odznacz Wszystkie",
   "PB.CharacterGeneratorWarning": "Zniszczyć tę postać i zastąpić ją nowym Piratem? UWAGA: Tego nie można cofnąć!",
   "PB.CharacterGeneratorWarningBaseClass": "* Wymagana co najmniej jedna klasa bez * zaznaczona.",
+  "PB.Combat": "Walka",
+  "PB.CombatBonuses": "Bonusy Walki",
   "PB.ContainerEmptyHelpText": "Przeciągnij przedmioty do tego pojemnika.",
   "PB.ContainerHolding": "Zawartość",
   "PB.ContainerSpace": "Pojemność",
@@ -61,14 +70,21 @@
   "PB.CreatureArmorDescription": "Opis Pancerza",
   "PB.CreatureAttack": "Główny Atak",
   "PB.CreatureAttackDescription": "Opis Ataku",
+  "PB.CreatureAttributes": "Atrybuty Stwora",
   "PB.CreatureSpecial": "Specjalne",
+  "PB.CrewCurrent": "Załoga (Obecna)",
+  "PB.CrewMax": "Załoga (Maks.)",
   "PB.DR": "ST",
+  "PB.DRBonus": "Modyfikator ST",
   "PB.Damage": "Obrażenia",
+  "PB.DamageBonus": "Modyfikator Obrażeń",
   "PB.Defend": "Obrona",
   "PB.DefendCrit": "Krytyczny",
   "PB.DefendCritText": "BG może wykonać natychmiastowy darmowy atak.",
   "PB.DefendFumble": "Skucha",
   "PB.DefendFumbleText": "BG otrzymuje podwójne obrażenia, następnie jego pancerz jest obniżany o jeden poziom.",
+  "PB.Defense": "Obrona",
+  "PB.DefenseBonus": "Modyfikator Obrony",
   "PB.Dodge": "Unik",
   "PB.EditAllowedCharacterGeneratorClassesMenu": "Dozwolone klasy",
   "PB.EditAllowedCharacterGeneratorClassesMenuButtonLabel": "Edytuj",
@@ -86,6 +102,7 @@
   "PB.EffectsItemOwned": "Efekty mogą być dodawane tylko do przedmiotów świata lub bezpośrednio do aktorów",
   "PB.EffectsNew": "Nowy Efekt",
   "PB.EffectsNoneFound": "Nie Znaleziono Efektu",
+  "PB.EffectsNotFound": "Nie znaleziono efektu",
   "PB.EffectsPassive": "Efekty Pasywne",
   "PB.EffectsQuick": "Szybki Efekt",
   "PB.EffectsRoundsRemaining": "Pozostałe Rundy",
@@ -100,8 +117,10 @@
   "PB.EquipArmorToAbsorb": "Wyposaż pancerz, aby absorbować obrażenia.",
   "PB.Equipment": "Wyposażenie",
   "PB.EquipmentEmpty": "Przeciągnij przedmioty na kartę, aby dodać przedmioty.",
+  "PB.ExtraResourceCurrent": "Dodatkowy Zasób (Obecny)",
   "PB.ExtraResourceFormula": "Formuła Dodatkowego Zasobu",
   "PB.ExtraResourceFormulaLabel": "Etykieta Formuły Dodatkowego Zasobu",
+  "PB.ExtraResourceMax": "Dodatkowy Zasób (Maks.)",
   "PB.ExtraResourceNamePlural": "Nazwa Dodatkowego Zasobu w Liczbie Mnogiej",
   "PB.ExtraResourceNameSingular": "Nazwa Dodatkowego Zasobu w Liczbie Pojedynczej",
   "PB.ExtraResourceTestFormula": "Formuła Testu Dodatkowego Zasobu",
@@ -134,12 +153,17 @@
   "PB.Help": "Pomoc",
   "PB.Hit": "Trafienie",
   "PB.HitPoints": "Punkty Życia",
+  "PB.HitPointsCurrent": "Punkty Życia (Obecne)",
+  "PB.HitPointsMax": "Punkty Życia (Maks.)",
+  "PB.HullCurrent": "Kadłub (Obecny)",
+  "PB.HullMax": "Kadłub (Maks.)",
   "PB.IgnoreArmor": "Obroń się przed bronią prochową",
   "PB.IncomingAttack": "Nadchodzący Atak",
   "PB.Individual": "Indywidualny",
   "PB.Infection": "Zarażony/chory/krwawiący/zatruty",
   "PB.Inflict": "Zadaj",
   "PB.Initiative": "Inicjatywa",
+  "PB.InitiativeBonus": "Modyfikator Inicjatywy",
   "PB.InitiativeEnemiesBegin": "Wrogowie zaczynają",
   "PB.InitiativeFormula": "k6 + Zwinność",
   "PB.InitiativePlayerCharactersBegin": "BG zaczynają",
@@ -215,7 +239,12 @@
   "PB.ItemWeaponType": "Typ Broni",
   "PB.Label": "Etykieta",
   "PB.Luck": "Piekielny Fart",
+  "PB.LuckCurrent": "Fart (Obecny)",
+  "PB.LuckDie": "Kość Fartu",
+  "PB.LuckDieBonus": "Modyfikator Kości Fartu",
   "PB.LuckHelpText": "Maks. obrażenia, przerzut, -k6 obrażeń, ST -4, brak kryt./skuchy",
+  "PB.LuckMax": "Fart (Maks.)",
+  "PB.LuckModifier": "Modyfikator Fartu",
   "PB.Lucks": "Piekieny(ch) Fart(ów)",
   "PB.MaxQuantity": "Maksymalna Ilość",
   "PB.Miss": "Pudło",
@@ -283,9 +312,12 @@
   "PB.RitualPerday": "k4 + Duch na dzień",
   "PB.RitualRemaining": "Rytuały",
   "PB.Rituals": "Rytuał(y)",
+  "PB.RitualsCurrent": "Rytuały (Obecne)",
+  "PB.RitualsMax": "Rytuały (Maks.)",
   "PB.Roll": "Rzuć",
   "PB.RollDamageButton": "Rzuć na Obrażenia",
   "PB.RollPartyInitiative": "Rzuć na Inicjatywę Drużyny",
+  "PB.Rounds": "Rundy",
   "PB.RuleText": "Tekst Zasad",
   "PB.SelectAmmo": "Wybierz amunicję",
   "PB.SettingsAdvancedAnimation": "Zaawansowane animacje",
@@ -304,6 +336,8 @@
   "PB.SettingsFloatingOutcomeAnimationHint": "Wyświetl animacje nad tokenami dla wyników rzutów (unik, pudło, trafienie, sukces, itp). Wymagany moduł Sequencer.",
   "PB.SettingsTrackAmmo": "Śledź Amunicję",
   "PB.SettingsTrackAmmoHint": "Wybierz i automatycznie zmniejszaj amunicję dla broni dystansowej.",
+  "PB.ShantiesCurrent": "Szanty (Obecne)",
+  "PB.ShantiesMax": "Szanty (Maks.)",
   "PB.SheetClassCharacter": "Karta Postaci Pirate Borg",
   "PB.SheetClassContainer": "Karta Pojemnika Pirate Borg",
   "PB.SheetClassCreature": "Karta Stwora Pirate Borg",
@@ -352,6 +386,10 @@
   "PB.ShipWeighAnchorMessage": "Statek nie jest już zakotwiczony.",
   "PB.ShouldIgnoreArmor": "Broń prochowa ignoruje pancerz",
   "PB.Silver": "Srebro",
+  "PB.Speed": "Prędkość",
+  "PB.SpeedBonus": "Modyfikator Prędkości",
+  "PB.SpeedCurrent": "Prędkość (Obecna)",
+  "PB.SpeedMax": "Prędkość (Maks.)",
   "PB.SpeedsMove": "Ruch",
   "PB.SpeedsStay": "Pozostań",
   "PB.StandsFirm": "Stoi twardo",
@@ -382,6 +420,7 @@
   "PB.Tier": "Poziom",
   "PB.Type": "Typ",
   "PB.Unchanged": "Bez zmian",
+  "PB.VehicleAttributes": "Atrybuty Pojazdu",
   "PB.ViewButton": "Podgląd",
   "PB.Vs": "vs",
   "PB.WeaponTable": "Tabela Broni",
