feat: overhaul status effect icons with Pirate Borg themed effects
- Replace Foundry VTT default status effects with curated set
- Add 31 status effects (17 relevant defaults + 14 Pirate Borg specific)
- Add 12 colored markers for arbitrary token marking
- Add Token HUD CSS styling for 8-column grid layout
- All icons sourced from game-icons.net (CC BY 3.0)

New Pirate Borg effects: Intoxicated, Infected, Starving, Broken,
Encumbered, Seasick, Cursed, Blessed, Slowed, Drowning, Swimming,
In Rigging, Carrying Treasure, Flying

--- a/lang/en.json
+++ b/lang/en.json
@@ -263,6 +263,18 @@
   "PB.LuckMax": "Luck (Max)",
   "PB.LuckModifier": "Luck Modifier",
   "PB.Lucks": "Devil's Luck(s)",
+  "PB.MarkerBlack": "Marker: Black",
+  "PB.MarkerBlue": "Marker: Blue",
+  "PB.MarkerBrown": "Marker: Brown",
+  "PB.MarkerCyan": "Marker: Cyan",
+  "PB.MarkerGray": "Marker: Gray",
+  "PB.MarkerGreen": "Marker: Green",
+  "PB.MarkerOrange": "Marker: Orange",
+  "PB.MarkerPink": "Marker: Pink",
+  "PB.MarkerPurple": "Marker: Purple",
+  "PB.MarkerRed": "Marker: Red",
+  "PB.MarkerWhite": "Marker: White",
+  "PB.MarkerYellow": "Marker: Yellow",
   "PB.MaxQuantity": "Maximum Quantity",
   "PB.Miss": "Miss",
   "PB.Modified": "Modified",
@@ -421,6 +433,36 @@
   "PB.StartingMacro": "Starting Macro",
   "PB.StartingRolls": "Starting Rolls",
   "PB.Starvation": "Starvation",
+  "PB.StatusAsleep": "Asleep",
+  "PB.StatusBlessed": "Blessed",
+  "PB.StatusBlind": "Blind",
+  "PB.StatusBroken": "Broken",
+  "PB.StatusBurning": "Burning",
+  "PB.StatusCarryingTreasure": "Carrying Treasure",
+  "PB.StatusCursed": "Cursed",
+  "PB.StatusDead": "Dead",
+  "PB.StatusDeaf": "Deaf",
+  "PB.StatusDiseased": "Diseased",
+  "PB.StatusDrowning": "Drowning",
+  "PB.StatusEncumbered": "Encumbered",
+  "PB.StatusFrightened": "Frightened",
+  "PB.StatusFrozen": "Frozen",
+  "PB.StatusInRigging": "In Rigging",
+  "PB.StatusInfected": "Infected",
+  "PB.StatusIntoxicated": "Intoxicated",
+  "PB.StatusInvisible": "Invisible",
+  "PB.StatusParalyzed": "Paralyzed",
+  "PB.StatusPoisoned": "Poisoned",
+  "PB.StatusProne": "Prone",
+  "PB.StatusRestrained": "Restrained",
+  "PB.StatusSeasick": "Seasick",
+  "PB.StatusSilenced": "Silenced",
+  "PB.StatusSlowed": "Slowed",
+  "PB.StatusStarving": "Starving",
+  "PB.StatusStunned": "Stunned",
+  "PB.StatusSwimming": "Swimming",
+  "PB.StatusTargeted": "Targeted",
+  "PB.StatusUnconscious": "Unconscious",
   "PB.Storage": "Storage",
   "PB.TabCombat": "Combat",
   "PB.TabContents": "Contents",
