feat: tinyMCE migration to prosemirror

--- a/lang/en.json
+++ b/lang/en.json
@@ -41,7 +41,14 @@
   "PB.Base": "Base",
   "PB.BaseClass": "Base Class",
   "PB.BaseClassRequired": "Base Class Required",
+  "PB.Bleeding": "Bleeding",
+  "PB.BleedingDescription": "The character is bleeding and losing HP over time.",
+  "PB.Blind": "Blind",
+  "PB.BlindDescription": "The character cannot see.",
   "PB.Broken": "Broken",
+  "PB.BrokenDescription": "The character is broken. They cannot act until healed or rested.",
+  "PB.Burning": "Burning",
+  "PB.BurningDescription": "The character is on fire and takes damage each round.",
   "PB.Cancel": "Cancel",
   "PB.CargoCurrent": "Cargo (Current)",
   "PB.CargoMax": "Cargo (Max)",
@@ -63,6 +70,12 @@
   "PB.CharacterGeneratorToggleNone": "Toggle None",
   "PB.CharacterGeneratorWarning": "Destroy this character, and replace it with a new Pirate? WARNING: This cannot be undone!",
   "PB.CharacterGeneratorWarningBaseClass": "* Requires at least one class without a * selected.",
+  "PB.Check": "Check",
+  "PB.ClickToRoll": "Click to roll",
+  "PB.ClickToRollCheck": "Click to roll {ability} check",
+  "PB.ClickToRollDamage": "Click to roll damage",
+  "PB.ClickToRollHeal": "Click to roll healing",
+  "PB.ClickToRollSave": "Click to roll {ability} save",
   "PB.Combat": "Combat",
   "PB.CombatBonuses": "Combat Bonuses",
   "PB.ContainerEmptyHelpText": "Drag items into this container.",
@@ -78,10 +91,14 @@
   "PB.CreatureSpecial": "Special",
   "PB.CrewCurrent": "Crew (Current)",
   "PB.CrewMax": "Crew (Max)",
+  "PB.Cursed": "Cursed",
+  "PB.CursedDescription": "The character is under a curse.",
   "PB.DR": "DR",
   "PB.DRBonus": "DR Modifier",
   "PB.Damage": "Damage",
   "PB.DamageBonus": "Damage Modifier",
+  "PB.Dead": "Dead",
+  "PB.DeadDescription": "The character has died.",
   "PB.Defend": "Defend",
   "PB.DefendCrit": "Critical",
   "PB.DefendCritText": "PC can make an immediate free attack.",
@@ -90,6 +107,10 @@
   "PB.Defense": "Defense",
   "PB.DefenseBonus": "Defense Modifier",
   "PB.Dodge": "Dodge",
+  "PB.Drowning": "Drowning",
+  "PB.DrowningDescription": "The character is drowning and will die if not rescued.",
+  "PB.Drunk": "Drunk",
+  "PB.DrunkDescription": "The character is intoxicated. -2 on all tests.",
   "PB.EditAllowedCharacterGeneratorClassesMenu": "Allowed classes",
   "PB.EditAllowedCharacterGeneratorClassesMenuButtonLabel": "Edit",
   "PB.EditAllowedCharacterGeneratorClassesMenuHint": "Edit the allowed classes in the character generator.",
@@ -130,6 +151,7 @@
   "PB.ExtraResourceTestFormula": "Extra Resource Test Formula",
   "PB.ExtraResourceTestFormulaLabel": "Extra Resource Test Formula Label",
   "PB.ExtraResourceUse": "Use Extra Resource",
+  "PB.Failure": "Failure",
   "PB.FeatureType": "Feature Type",
   "PB.FlavorText": "Flavor Text",
   "PB.GetBetter": "Gain Experience",
@@ -154,6 +176,7 @@
   "PB.Hat": "Hat",
   "PB.HatTable": "Hat Table",
   "PB.Heal": "Heal",
+  "PB.Healing": "Healing",
   "PB.Help": "Help",
   "PB.Hit": "Hit",
   "PB.HitPoints": "Hit Points",
@@ -164,6 +187,8 @@
   "PB.IgnoreArmor": "Defend against black powder weapon",
   "PB.IncomingAttack": "Incoming Attack",
   "PB.Individual": "Individual",
+  "PB.Infected": "Infected",
+  "PB.InfectedDescription": "The character is infected. Lose d6 HP every morning instead of recovering.",
   "PB.Infection": "Infected/sick/bleeding/poisoned",
   "PB.Inflict": "Inflict",
   "PB.Initiative": "Initiative",
@@ -172,6 +197,8 @@
   "PB.InitiativeFormula": "d6 + Agility",
   "PB.InitiativePlayerCharactersBegin": "PCs go first",
   "PB.InvalidTarget": "You need to select a target",
+  "PB.Invisible": "Invisible",
+  "PB.InvisibleDescription": "The character cannot be seen.",
   "PB.InvokableCriticalSuccess": "Critical Success",
   "PB.InvokableFailure": "Failure",
   "PB.InvokableFumble": "Fumble",
@@ -260,6 +287,7 @@
   "PB.Movement": "Movement",
   "PB.MysticalMishaps": "Mystical Mishaps",
   "PB.Name": "Name",
+  "PB.NoActorSelected": "No actor selected. Select a token or assign a character.",
   "PB.NoAmmo": "No ammo equipped",
   "PB.NoAmmoEquipped": "Invalid ammo or no ammo equipped. This weapon required ammo.",
   "PB.NoEffect": "No effect",
@@ -296,6 +324,8 @@
   "PB.PerDay": "per day",
   "PB.PerRest": "per rest",
   "PB.PirateBorg": "PIRATE BORG",
+  "PB.Poisoned": "Poisoned",
+  "PB.PoisonedDescription": "The character is poisoned and suffers ill effects.",
   "PB.Powers": "Relics & Rituals",
   "PB.Quantity": "Quantity",
   "PB.Reaction": "Reaction",
@@ -323,6 +353,7 @@
   "PB.RollPartyInitiative": "Roll Party Initiative",
   "PB.Rounds": "Rounds",
   "PB.RuleText": "Rule Text",
+  "PB.Save": "Save",
   "PB.SelectAmmo": "Select ammo",
   "PB.SettingsAdvancedAnimation": "Advanced animations",
   "PB.SettingsAdvancedAnimationHint": "Enable animations for attacks, ship actions, defense, ritual, relic, etc. Sequencer, and JB2A Free or JB2A Patreon modules are required.",
@@ -406,6 +437,9 @@
   "PB.StartingRolls": "Starting Rolls",
   "PB.Starvation": "Starvation",
   "PB.Storage": "Storage",
+  "PB.Stunned": "Stunned",
+  "PB.StunnedDescription": "The character is stunned and cannot act this round.",
+  "PB.Success": "Success",
   "PB.TabCombat": "Combat",
   "PB.TabContents": "Contents",
   "PB.TabDescription": "Description",
