feat: implement stairways system for Pirate Borg, heavily based on https://gitlab.com/SWW13/foundryvtt-stairways

--- a/lang/en.json
+++ b/lang/en.json
@@ -451,5 +451,75 @@
   "TYPES.Item.invokable": "Invokable",
   "TYPES.Item.misc": "Misc",
   "TYPES.Item.shanty": "Shanty",
-  "TYPES.Item.weapon": "Weapon"
+  "TYPES.Item.weapon": "Weapon",
+
+  "DOCUMENT.Stairway": "Stairway",
+  "DOCUMENT.Stairways": "Stairways",
+
+  "STAIRWAYS.LayerTitle": "Stairways",
+  "STAIRWAYS.ToolSelect": "Select Stairway",
+  "STAIRWAYS.ToolCreate": "Create Stairway",
+  "STAIRWAYS.ToolAnimate": "Animate Teleport",
+  "STAIRWAYS.ToolDisable": "Disable New Stairways",
+  "STAIRWAYS.ToolHide": "Hide New Stairways",
+  "STAIRWAYS.ToolClear": "Clear All Stairways",
+
+  "STAIRWAYS.ConfigTitle": "Stairway Configuration",
+  "STAIRWAYS.TabMain": "Main",
+  "STAIRWAYS.TabLabel": "Label",
+  "STAIRWAYS.TabPosition": "Position",
+
+  "STAIRWAYS.Status": "Status",
+  "STAIRWAYS.StatusConnected": "Connected",
+  "STAIRWAYS.StatusNoPartner": "No Partner (Same Scene)",
+  "STAIRWAYS.StatusNoPartnerOtherScene": "No Partner (Other Scene)",
+  "STAIRWAYS.StatusNonMonogamous": "Multiple Partners (Error)",
+  "STAIRWAYS.TargetScene": "Target Scene",
+  "STAIRWAYS.CurrentScene": "Current Scene",
+  "STAIRWAYS.Name": "Connection Name",
+  "STAIRWAYS.NameHint": "Stairways with the same name are connected as a pair.",
+  "STAIRWAYS.Icon": "Icon",
+  "STAIRWAYS.CustomIcon": "Custom Icon",
+  "STAIRWAYS.IconSize": "Icon Size",
+  "STAIRWAYS.Width": "Width",
+  "STAIRWAYS.Height": "Height",
+
+  "STAIRWAYS.Disabled": "Disabled",
+  "STAIRWAYS.DisabledHint": "Disabled stairways cannot be used by players.",
+  "STAIRWAYS.Hidden": "Hidden",
+  "STAIRWAYS.HiddenHint": "Hidden stairways are not visible to players.",
+  "STAIRWAYS.Animate": "Animate",
+  "STAIRWAYS.AnimateHint": "Animate the camera pan when teleporting.",
+
+  "STAIRWAYS.PartnerSceneLabel": "Show Scene Name",
+  "STAIRWAYS.PartnerSceneLabelHint": "Display the partner scene name as the label.",
+  "STAIRWAYS.Label": "Custom Label",
+  "STAIRWAYS.FontFamily": "Font Family",
+  "STAIRWAYS.FontSize": "Font Size",
+  "STAIRWAYS.TextColor": "Text Color",
+
+  "STAIRWAYS.ResetDefaults": "Reset to Defaults",
+  "STAIRWAYS.Submit": "Save Changes",
+
+  "STAIRWAYS.ClearAllTitle": "Clear All Stairways",
+  "STAIRWAYS.ClearAllContent": "Are you sure you want to delete all stairways on this scene?",
+
+  "STAIRWAYS.Messages.NoTokenSelected": "You must select a token to teleport.",
+  "STAIRWAYS.Messages.Disabled": "This stairway is disabled.",
+  "STAIRWAYS.Messages.NoPartner": "This stairway has no connected partner.",
+  "STAIRWAYS.Messages.NoGM": "No GM is available to process the teleport request.",
+  "STAIRWAYS.Messages.InternalError": "An internal error occurred.",
+  "STAIRWAYS.NoTokenSelected": "You must select a token to teleport.",
+  "STAIRWAYS.StairwayDisabled": "This stairway is disabled.",
+  "STAIRWAYS.NoPartner": "This stairway has no connected partner.",
+  "STAIRWAYS.InternalError": "An internal error occurred.",
+
+  "STAIRWAYS.Icons.Stairway": "Stairway",
+  "STAIRWAYS.Icons.DoorSteel": "Steel Door",
+  "STAIRWAYS.Icons.DoorClosed": "Closed Door",
+  "STAIRWAYS.Icons.DoorExit": "Exit Door",
+  "STAIRWAYS.Icons.Cave": "Cave",
+  "STAIRWAYS.Icons.House": "House",
+  "STAIRWAYS.Icons.City": "City",
+  "STAIRWAYS.Icons.Castle": "Castle"
 }
