--- a/lang/en.json
+++ b/lang/en.json
@@ -90,7 +90,7 @@
   "PB.Defense": "Defense",
   "PB.DefenseBonus": "Defense Modifier",
   "PB.Dodge": "Dodge",
-  "PB.Drinks": "Drinks",
+  "PB.Grog": "Grog",
   "PB.EditAllowedCharacterGeneratorClassesMenu": "Allowed classes",
   "PB.EditAllowedCharacterGeneratorClassesMenuButtonLabel": "Edit",
   "PB.EditAllowedCharacterGeneratorClassesMenuHint": "Edit the allowed classes in the character generator.",
@@ -241,8 +241,8 @@
   "PB.ItemTypeArmorPlural": "Armor",
   "PB.ItemTypeClass": "Class",
   "PB.ItemTypeContainer": "Container",
-  "PB.ItemTypeDrink": "Drink",
-  "PB.ItemTypeDrinkPlural": "Drinks",
+  "PB.ItemTypeGrog": "Grog",
+  "PB.ItemTypeGrogPlural": "Grog",
   "PB.ItemTypeFeat": "Feat",
   "PB.ItemTypeHat": "Hat",
   "PB.ItemTypeInvokable": "Invokable",
@@ -287,7 +287,7 @@
   "PB.Name": "Name",
   "PB.NoAmmo": "No ammo equipped",
   "PB.NoAmmoEquipped": "Invalid ammo or no ammo equipped. This weapon required ammo.",
-  "PB.NoDrinks": "No drinks in inventory",
+  "PB.NoGrog": "No grog in inventory",
   "PB.NoEffect": "No effect",
   "PB.NoPowerUsesRemaining": "No Arcane Ritual uses remaining",
   "PB.NoResourceUsesRemaining": "No {type} uses remaining",
