feat: localise marker colours

--- a/lang/en.json
+++ b/lang/en.json
@@ -250,18 +250,18 @@
   "PB.LuckMax": "Luck (Max)",
   "PB.LuckModifier": "Luck Modifier",
   "PB.Lucks": "Devil's Luck(s)",
-  "PB.MarkerBlack": "Marker: Black",
-  "PB.MarkerBlue": "Marker: Blue",
-  "PB.MarkerBrown": "Marker: Brown",
-  "PB.MarkerCyan": "Marker: Cyan",
-  "PB.MarkerGray": "Marker: Gray",
-  "PB.MarkerGreen": "Marker: Green",
-  "PB.MarkerOrange": "Marker: Orange",
-  "PB.MarkerPink": "Marker: Pink",
-  "PB.MarkerPurple": "Marker: Purple",
-  "PB.MarkerRed": "Marker: Red",
-  "PB.MarkerWhite": "Marker: White",
-  "PB.MarkerYellow": "Marker: Yellow",
+  "PB.MarkerBlack": "Black",
+  "PB.MarkerBlue": "Blue",
+  "PB.MarkerBrown": "Brown",
+  "PB.MarkerCyan": "Cyan",
+  "PB.MarkerGray": "Gray",
+  "PB.MarkerGreen": "Green",
+  "PB.MarkerOrange": "Orange",
+  "PB.MarkerPink": "Pink",
+  "PB.MarkerPurple": "Purple",
+  "PB.MarkerRed": "Red",
+  "PB.MarkerWhite": "White",
+  "PB.MarkerYellow": "Yellow",
   "PB.MaxQuantity": "Maximum Quantity",
   "PB.Miss": "Miss",
   "PB.Modified": "Modified",
