--- a/lang/pl.json
+++ b/lang/pl.json
@@ -250,6 +250,18 @@
   "PB.LuckMax": "Fart (Maks.)",
   "PB.LuckModifier": "Modyfikator Fartu",
   "PB.Lucks": "Piekieny(ch) Fart(ów)",
+  "PB.MarkerBlack": "Czarny",
+  "PB.MarkerBlue": "Niebieski",
+  "PB.MarkerBrown": "Brązowy",
+  "PB.MarkerCyan": "Turkusowy",
+  "PB.MarkerGray": "Szary",
+  "PB.MarkerGreen": "Zielony",
+  "PB.MarkerOrange": "Pomarańczowy",
+  "PB.MarkerPink": "Różowy",
+  "PB.MarkerPurple": "Purpurowy",
+  "PB.MarkerRed": "Czerwony",
+  "PB.MarkerWhite": "Biały",
+  "PB.MarkerYellow": "Żółty",
   "PB.MaxQuantity": "Maksymalna Ilość",
   "PB.Miss": "Pudło",
   "PB.Modified": "Zmodyfikowany",
@@ -405,6 +417,36 @@
   "PB.StartingMacro": "Początkowe Makro",
   "PB.StartingRolls": "Początkowe Rzuty",
   "PB.Starvation": "Głód",
+  "PB.StatusAsleep": "Śpiący",
+  "PB.StatusBlessed": "Błogosławiony",
+  "PB.StatusBlind": "Ślepy",
+  "PB.StatusBroken": "Złamany",
+  "PB.StatusBurning": "Płonący",
+  "PB.StatusCarryingTreasure": "Noszący Skarb",
+  "PB.StatusCursed": "Przeklęty",
+  "PB.StatusDead": "Martwy",
+  "PB.StatusDeaf": "Głuchy",
+  "PB.StatusDiseased": "Chory",
+  "PB.StatusDrowning": "Tonący",
+  "PB.StatusEncumbered": "Przeciążony",
+  "PB.StatusFrightened": "Przerażony",
+  "PB.StatusFrozen": "Zamarznięty",
+  "PB.StatusInRigging": "W Linach",
+  "PB.StatusInfected": "Zarażony",
+  "PB.StatusIntoxicated": "Pijany",
+  "PB.StatusInvisible": "Niewidoczny",
+  "PB.StatusParalyzed": "Sparaliżowany",
+  "PB.StatusPoisoned": "Otruty",
+  "PB.StatusProne": "Przewrócony",
+  "PB.StatusRestrained": "Związany",
+  "PB.StatusSeasick": "Morski Chorób",
+  "PB.StatusSilenced": "Wyciszony",
+  "PB.StatusSlowed": "Spowolniony",
+  "PB.StatusStarving": "Głodujący",
+  "PB.StatusStunned": "Ogłuszony",
+  "PB.StatusSwimming": "Pływający",
+  "PB.StatusTargeted": "Wyznaczony",
+  "PB.StatusUnconscious": "Nieprzytomny",
   "PB.Storage": "Magazyn",
   "PB.TabCombat": "Walka",
   "PB.TabContents": "Zawartość",
